# parallel_computing_final

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
apps/: CMakeLists.txt  mpi.cpp  openacc.cpp  openmp.cpp  vk.cpp
framework/: CMakeLists.txt  vk_descriptors.cpp  vk_engine.cpp  vk_image.cpp  vk_initializers.cpp  vk_pipelines.cpp
framework/include/framework/: vk_descriptors.h  vk_engine.h  vk_image.h  vk_initializers.h  vk_pipelines.h  vk_types.h
include/lib/: common.h  shared.h
scripts/: assignment.pbs  assignment.sh  plot.py  run_benchmarks.sh
shaders/: CMakeLists.txt  gradient.comp  gradient.spv  heat_shader.comp  heat_shader_1024.comp  heat_shader_256.comp  heat_shader_512.comp  heat_shader_subgroup.comp
src/: CMakeLists.txt  mpi.cpp  openmp.cpp  shared.cpp  vk.cpp
tests/: CMakeLists.txt  benchmarks.cpp  cpu_bench.cpp  cpu_tests.cpp  gpu_bench.cpp  gpu_tests.cpp  tests.cpp
